Change History
==============

1.7b6 unreleased
----------------

- More accurately identify validation errors in Google Analytics tracking.
  [yomatters]

- Re-add ability to override edit macros like for other Archetypes content types
  (Megaphone relies on this).
  [davisagli]

- change i18n domain of quickedit template from plone to ploneformgen
  [toutpt]

- locales rebuild & update french translations
  [toutpt]

1.7b5 2011-07-03
----------------

- Disable right and left columns in QuickEdit.
  [smcmahon]

- Fix to problem viewing form fields independently was inadequate if prologue
  or epilogue actually existed. Thanks, Eggert Ehmke.
  [smcmahon]

1.7b4 2011-06-16
----------------

- Move fieldset markers into a separate part of quickedit toolbox.
  [smcmahon]

- Fix popen2 deprecation warning by using subprocess
  [toutpt]

1.7b3 2011-06-14
----------------

- Add fieldset begin/end markers; these will replace fieldset folders going
  forward so that fieldsets may work better with the quickeditor. Fieldset
  folders will still work, but will not be addable by default.
  [smcmahon]

- Fix German translation of RangeValidator
  [fRiSi]

1.7b2 2011-06-05
----------------

- In quickedit, normalize required markers to Plone 4 style (after the label)
  so that we can use the same js for p4 and p4.1.
  [smcmahon]

- Drag and drop stopped working in 4.1 due to loss of id context in
  placeholder. Fixed.
  [smcmahon]

- Previous fix to duplicate action adapters did not preserve order of
  execution. Fixed.
  [smcmahon]

- Fix misleading failure in attachments tests. Test didn't account for
  quick editor changes.
  [smcmahon]

- Form fields could not be independently viewed in Plone 4/4.1.
  [smcmahon]

- Fixed issue with image captions not displaying in form prologue/epilogue
  [dextermilo]

1.7b1 2011-05-21
----------------

- Load ZCML for collective.js.jqueryui.
  [davisagli]

- Add collective.portlet.itemview integration.
  [toutpt]
